Use "C-a ;" to issue command to all screens

--- a/.screenrc
+++ b/.screenrc
@@ -12,4 +12,7 @@ startup_message off
 termcapinfo xterm* ti@:te@
 defscrollback 10000
 
+register s "^a:at '#' stuff "
+bind ; process s
+
 source .screen_layout
